# lacture-pages

./: README.md
docs/: index.html
docs/day-1/: c1-opencv.html  index.html
docs/day-1-course-1/: index.html
docs/day-1-course-2/: index.html
docs/day-1-course-3/: index.html
docs/day-2/: index.html
docs/day-2-course-1/: index.html
docs/day-2-course-2/: index.html
manipulator_practice_cpp/: CMakeLists.txt  package.xml
manipulator_practice_cpp/config/: result_park.csv
manipulator_practice_cpp/src/: robot_action_server.cpp  static_map_scanner.cpp
manipulator_practice_cpp/srv/: MoveToPose.srv
manipulator_practice_python/: package.xml  setup.cfg  setup.py
manipulator_practice_python/config/: workspace_map.bt
manipulator_practice_python/launch/: system_bringup.launch.py
manipulator_practice_python/manipulator_practice_python/: data_player.py  dynamic_obstacle_node.py  hip_pose_detector_node.py  map_publisher.py  realtime_trajectory_test.py  robot_action_gateway.py
