<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>manipulator_practice_cpp</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="bkyb@todo.todo">bkyb</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <depend>rclcpp</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>octomap_ros</depend>
  <depend>octomap_msgs</depend>
  <depend>liboctomap-dev</depend>
  
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>
  
  <depend>moveit_ros_planning_interface</depend>
  <depend>dsr_msgs2</depend>
  <depend>moveit_msgs</depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
