<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>manipulator_practice_python</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="bkyb@todo.todo">bkyb</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>moveit_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>dsr_msgs2</depend>
  
  <exec_depend>octomap_msgs</exec_depend>
  <exec_depend>manipulator_practice_cpp</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
